[project]
name = "CursorXY"
version = "0.0.1"
authors = [
  { name="Jimmeh", email="jimmyzeng998@gmail.com" },
]
description = "A Simple Cursor XY Coordinate Capture Program"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Jimmytheprofessionaldumbass/CursorXY"
